--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=VGAX
+name=VGAX_RGB3
 version=1.2.0
 author=Sandro Maffiodo <smaffer@gmail.com>
 maintainer=Sandro Maffiodo <smaffer@gmail.com>
