--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,9 @@
 name=VGAX_RGB3
-version=1.2.0
-author=Sandro Maffiodo <smaffer@gmail.com>
-maintainer=Sandro Maffiodo <smaffer@gmail.com>
-sentence=VGA signal generator for UNO and MEGA
-paragraph=Supports 120x60px 2bpp on Arduino UNO and 120x240px 2bpp on Arduino MEGA
+version=1.0.0
+author=Your Name
+maintainer=Your Email
+sentence=Modified VGAX library for 3-bit RGB (8-color) video output
+paragraph=This is a fork of the VGAX library modified for 3-bit RGB (8-color) output using pins D5, D6, and D7. Designed for Arduino Uno.
 category=Display
-url=https://github.com/smaffer/vgax
+url=https://github.com/yourusername/VGAX_RGB3
 architectures=avr
-includes=VGAX.h
